# PeitPE

./: .gitignore  AGENTS.md  LICENSE  README.md  build.ps1  build.py  config.json  pyproject.toml
apps/: additions.json  updates.json
peitpe/: __init__.py  app_manager.py  config.py  iso_builder.py  iso_cleaner.py  iso_downloader.py  iso_extractor.py  prerequisites.py  rebranding.py  upx_packer.py  wallpaper.py  wim_manager.py  wim_optimizer.py
peitpe/helpers/: __init__.py  archiver.py  downloader.py  github_api.py
scripts/: Add-Apps.ps1  Build-ISO.ps1  Get-LatestISO.ps1  Initialize.ps1  Mount-ISO.ps1  Mount-WIM.ps1  Set-Wallpaper.ps1  Unmount-WIM.ps1  Update-Apps.ps1
scripts/helpers/: Get-LatestGitHubRelease.ps1  Invoke-AppDownload.ps1
